# MGX

./: CMakeLists.txt  README.md  inference.cpp  preprocess.py
